some code added

--- a/index.html
+++ b/index.html
@@ -11,19 +11,51 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter+Tight:wght@500;700&family=Inter:wght@700&family=Italianno&family=Merriweather:wght@400;900&family=Open+Sans:wght@400;700&family=Playfair+Display:ital,wght@1,500&family=Poppins:wght@300;400&family=Roboto:ital,wght@0,400;0,700;0,900;1,500&display=swap" rel="stylesheet">
+
 </head>
 <body>
-    <!--new year banner starts here-->
-    <div  class="new-year"><img src="./resources/Banner Image.png" alt="">
+  <header>
+      <!--new year banner starts here-->
+      <div  class="new-year"><img src="./resources/Banner Image.png" alt="">
         <h3 >Happy New Year</h3>
         <h1>New Year Party </h1> <h1>Celebration</h1>
-    </div>
+ 
       <!--new year banner ends here-->
-      <!--discount banner starts here-->
-      <div>
-        <h5>65% OFF</h5>
-      </div>
 
+  </header>
+
+   <main>
        <!--discount banner starts here-->
+ <section class="discount">
+    <h5 class="discount-header">65% OFF</h5>
+    <h2 class="discount-description">OUR HOLIDAY DEALS ARE BETTER <br><span> ALL CATEGORIES</span></h2>
+   
+    <img src="./resources/New Year Photo.png" alt="">
+ 
+ </section>
+       <!--discount banner endss here-->
+
+  <!--discount banner endss here--> 
+       <section class="invitation">
+<div class="invitation-header">
+    <h1 >Welcome to midnight party</h1>
+    <h5>
+        Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. 
+    </h5>
+</div>
+<button>join now</button>
+<img src="./resources/Group 70.png" alt="">
+
+       </section>  
+          <!--discount banner endss here-->
+   
+        </main>
+
+
+
+
+   <footer>
+
+   </footer>
 </body>
 </html>
