--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 <body>
   <header>
       <!--new year banner starts here-->
-      <div  class="new-year"><img src="./resources/Banner Image.png" alt="">
+      <div  class="new-year">
         <h3 >Happy New Year</h3>
-        <h1>New Year Party </h1> <h1>Celebration</h1>
+        <h1>New Year Party <br>Celebration</h1>
  
       <!--new year banner ends here-->
 
@@ -74,8 +74,8 @@
             <img src="./resources/Rectangle 4.png" alt="">
             <img src="./resources/Rectangle 5.png" alt="">
             <img src="./resources/Rectangle 6.png" alt="">
-<img src="/resources/Rectangle 7.png" alt="">
-<img src="/resources/Rectangle 8.png" alt="">
+<img src="./resources/Rectangle 7.png" alt="">
+<img src="./resources/Rectangle 8.png" alt="">
 
         </div>
     </section>
@@ -100,20 +100,20 @@
 
        <div class="footer-mobile">
         
-        <h6> <img src="/resources/Call.png" alt="" class="contact-image">
+        <h6> <img src="./resources/Call.png" alt="" class="contact-image">
         +00 123 584 124 </h6>
         </div>
         <div class="footer-website">
           <h6>
-        <img src="/resources/Website.png" alt="" class="contact-image">www.website.com</h6>
+        <img src="./resources/Website.png" alt="" class="contact-image">www.website.com</h6>
 
     </div>
 
         <hr>
 <div class="footer-images">
-    <img src="/resources/Facebook.png" alt="">
-    <img src="/resources/Instagram.png" alt="">
-    <img src="/resources/Twitter.png" alt="">
+    <img src="./resources/Facebook.png" alt="">
+    <img src="./resources/Instagram.png" alt="">
+    <img src="./resources/Twitter.png" alt="">
 </div>
 <hr>
 <h6 class="copyright">2017, All Rights Reserved.</h6>
